ajoiut à data du code pour le CPI

--- a/data.ipynb
+++ b/data.ipynb
@@ -36,7 +36,8 @@
     "* [Récupération des données](#partie2)\n",
     "    * [Données de PIB](#partie21)\n",
     "    * [Données d'heures de travail](#partie22)\n",
-    "    * [Données des taux d'intérêts](#partie23)\n"
+    "    * [Données des taux d'intérêts](#partie23)\n",
+    "    * [Données d'indice à la consommation des prix](#partie24)\n"
    ]
   },
   {
@@ -277,6 +278,489 @@
     "df_ST_IR_pivot = df_ST_IR_selected.pivot_table(index='TIME_PERIOD', columns='Reference area', values='OBS_VALUE')\n",
     "df_ST_IR_pivot.columns = [f'ST_IR_{col}' for col in df_ST_IR_pivot.columns]\n",
     "df_ST_IR_pivot.columns = [col.replace(\" \", \"_\") for col in df_ST_IR_pivot.columns]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Données d'indice à la consommation des prix <a class=\"anchor\" id=\"partie24\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous récupérons les données relatives à l'indice à la consommation des prix, qui nécessite des modifications car les données actuelles sont mensuelles et non trimestrielles. Nous faisons le choix de les transformer en trimestrielles en attribuant les moyennes mensuelles sur trois mois à notre valeur. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Charger les données\n",
+    "df_CPI=pd.read_csv('Données_extraites/CPI_annual_eurostat_1996-2024.csv', encoding='utf-8')\n",
+    "\n",
+    "# Sélectionne les colonnes nécessaires avec les pays sélectionnés\n",
+    "df_CPI_selected = df_CPI[df_CPI['geo'].isin(countries_selected)][['geo', 'TIME_PERIOD', 'OBS_VALUE']]\n",
+    "\n",
+    "# Change le format avec les périodes en index et les noms des pays en noms de colonnes\n",
+    "df_CPI_pivot = df_CPI_selected.pivot_table(index='TIME_PERIOD', columns='geo', values='OBS_VALUE')\n",
+    "\n",
+    "# Transforme le nom des colonnes en CPI_Nom_du_pays\n",
+    "df_CPI_pivot.columns = [f'CPI_{col}' for col in df_CPI_pivot.columns]\n",
+    "df_CPI_pivot.columns = [col.replace(\" \", \"_\") for col in df_CPI_pivot.columns]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous transformons ici les données mensuelles en trimestrielles."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CPI_Austria</th>\n",
+       "      <th>CPI_Belgium</th>\n",
+       "      <th>CPI_Bulgaria</th>\n",
+       "      <th>CPI_Czechia</th>\n",
+       "      <th>CPI_Denmark</th>\n",
+       "      <th>CPI_Estonia</th>\n",
+       "      <th>CPI_Finland</th>\n",
+       "      <th>CPI_France</th>\n",
+       "      <th>CPI_Germany</th>\n",
+       "      <th>CPI_Greece</th>\n",
+       "      <th>...</th>\n",
+       "      <th>CPI_Norway</th>\n",
+       "      <th>CPI_Poland</th>\n",
+       "      <th>CPI_Portugal</th>\n",
+       "      <th>CPI_Romania</th>\n",
+       "      <th>CPI_Slovakia</th>\n",
+       "      <th>CPI_Slovenia</th>\n",
+       "      <th>CPI_Spain</th>\n",
+       "      <th>CPI_Sweden</th>\n",
+       "      <th>CPI_Switzerland</th>\n",
+       "      <th>CPI_United_Kingdom</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TIME_PERIOD</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1996Q1</th>\n",
+       "      <td>71.34</td>\n",
+       "      <td>69.91</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>70.4</td>\n",
+       "      <td>42.87</td>\n",
+       "      <td>71.20</td>\n",
+       "      <td>74.13</td>\n",
+       "      <td>75.1</td>\n",
+       "      <td>59.04</td>\n",
+       "      <td>...</td>\n",
+       "      <td>69.2</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>65.76</td>\n",
+       "      <td>2.71</td>\n",
+       "      <td>43.01</td>\n",
+       "      <td>43.88</td>\n",
+       "      <td>63.95</td>\n",
+       "      <td>75.41</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>67.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1996Q1</th>\n",
+       "      <td>71.55</td>\n",
+       "      <td>69.98</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>57.3</td>\n",
+       "      <td>70.8</td>\n",
+       "      <td>44.24</td>\n",
+       "      <td>71.49</td>\n",
+       "      <td>74.42</td>\n",
+       "      <td>75.6</td>\n",
+       "      <td>58.92</td>\n",
+       "      <td>...</td>\n",
+       "      <td>69.3</td>\n",
+       "      <td>43.6</td>\n",
+       "      <td>66.09</td>\n",
+       "      <td>2.76</td>\n",
+       "      <td>43.12</td>\n",
+       "      <td>44.43</td>\n",
+       "      <td>64.08</td>\n",
+       "      <td>75.60</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>68.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1996Q1</th>\n",
+       "      <td>71.77</td>\n",
+       "      <td>70.12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>57.6</td>\n",
+       "      <td>71.3</td>\n",
+       "      <td>44.95</td>\n",
+       "      <td>71.63</td>\n",
+       "      <td>74.90</td>\n",
+       "      <td>75.7</td>\n",
+       "      <td>60.64</td>\n",
+       "      <td>...</td>\n",
+       "      <td>69.5</td>\n",
+       "      <td>44.3</td>\n",
+       "      <td>66.23</td>\n",
+       "      <td>2.81</td>\n",
+       "      <td>43.22</td>\n",
+       "      <td>45.07</td>\n",
+       "      <td>64.34</td>\n",
+       "      <td>76.14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>68.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1996Q2</th>\n",
+       "      <td>71.69</td>\n",
+       "      <td>70.47</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>58.1</td>\n",
+       "      <td>71.5</td>\n",
+       "      <td>45.72</td>\n",
+       "      <td>71.78</td>\n",
+       "      <td>74.99</td>\n",
+       "      <td>75.6</td>\n",
+       "      <td>61.25</td>\n",
+       "      <td>...</td>\n",
+       "      <td>69.7</td>\n",
+       "      <td>45.2</td>\n",
+       "      <td>66.76</td>\n",
+       "      <td>2.87</td>\n",
+       "      <td>43.35</td>\n",
+       "      <td>45.76</td>\n",
+       "      <td>64.73</td>\n",
+       "      <td>76.49</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>68.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1996Q2</th>\n",
+       "      <td>71.62</td>\n",
+       "      <td>70.61</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>58.4</td>\n",
+       "      <td>71.7</td>\n",
+       "      <td>45.95</td>\n",
+       "      <td>71.99</td>\n",
+       "      <td>75.19</td>\n",
+       "      <td>75.7</td>\n",
+       "      <td>61.74</td>\n",
+       "      <td>...</td>\n",
+       "      <td>69.9</td>\n",
+       "      <td>45.8</td>\n",
+       "      <td>67.03</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>43.56</td>\n",
+       "      <td>46.04</td>\n",
+       "      <td>64.99</td>\n",
+       "      <td>76.56</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>68.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024Q3</th>\n",
+       "      <td>133.77</td>\n",
+       "      <td>132.73</td>\n",
+       "      <td>138.83</td>\n",
+       "      <td>152.9</td>\n",
+       "      <td>119.7</td>\n",
+       "      <td>156.41</td>\n",
+       "      <td>119.23</td>\n",
+       "      <td>124.77</td>\n",
+       "      <td>129.8</td>\n",
+       "      <td>119.57</td>\n",
+       "      <td>...</td>\n",
+       "      <td>134.8</td>\n",
+       "      <td>149.7</td>\n",
+       "      <td>122.37</td>\n",
+       "      <td>150.40</td>\n",
+       "      <td>143.65</td>\n",
+       "      <td>128.18</td>\n",
+       "      <td>123.54</td>\n",
+       "      <td>128.35</td>\n",
+       "      <td>107.86</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024Q3</th>\n",
+       "      <td>134.13</td>\n",
+       "      <td>132.21</td>\n",
+       "      <td>137.25</td>\n",
+       "      <td>152.2</td>\n",
+       "      <td>119.2</td>\n",
+       "      <td>155.95</td>\n",
+       "      <td>119.79</td>\n",
+       "      <td>123.15</td>\n",
+       "      <td>129.7</td>\n",
+       "      <td>121.71</td>\n",
+       "      <td>...</td>\n",
+       "      <td>135.1</td>\n",
+       "      <td>149.8</td>\n",
+       "      <td>124.28</td>\n",
+       "      <td>151.01</td>\n",
+       "      <td>143.73</td>\n",
+       "      <td>128.44</td>\n",
+       "      <td>123.42</td>\n",
+       "      <td>128.76</td>\n",
+       "      <td>107.50</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024Q4</th>\n",
+       "      <td>134.63</td>\n",
+       "      <td>132.90</td>\n",
+       "      <td>138.14</td>\n",
+       "      <td>152.6</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>157.20</td>\n",
+       "      <td>120.71</td>\n",
+       "      <td>123.54</td>\n",
+       "      <td>130.2</td>\n",
+       "      <td>121.80</td>\n",
+       "      <td>...</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>150.3</td>\n",
+       "      <td>123.84</td>\n",
+       "      <td>152.08</td>\n",
+       "      <td>144.82</td>\n",
+       "      <td>128.11</td>\n",
+       "      <td>123.91</td>\n",
+       "      <td>129.36</td>\n",
+       "      <td>107.48</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024Q4</th>\n",
+       "      <td>135.00</td>\n",
+       "      <td>133.13</td>\n",
+       "      <td>138.53</td>\n",
+       "      <td>152.7</td>\n",
+       "      <td>119.5</td>\n",
+       "      <td>156.15</td>\n",
+       "      <td>120.37</td>\n",
+       "      <td>123.36</td>\n",
+       "      <td>129.3</td>\n",
+       "      <td>120.32</td>\n",
+       "      <td>...</td>\n",
+       "      <td>136.6</td>\n",
+       "      <td>150.8</td>\n",
+       "      <td>122.58</td>\n",
+       "      <td>152.57</td>\n",
+       "      <td>145.18</td>\n",
+       "      <td>128.98</td>\n",
+       "      <td>123.95</td>\n",
+       "      <td>130.11</td>\n",
+       "      <td>106.92</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024Q4</th>\n",
+       "      <td>135.92</td>\n",
+       "      <td>134.12</td>\n",
+       "      <td>138.99</td>\n",
+       "      <td>152.3</td>\n",
+       "      <td>119.1</td>\n",
+       "      <td>156.57</td>\n",
+       "      <td>120.46</td>\n",
+       "      <td>123.62</td>\n",
+       "      <td>130.2</td>\n",
+       "      <td>120.42</td>\n",
+       "      <td>...</td>\n",
+       "      <td>136.4</td>\n",
+       "      <td>150.9</td>\n",
+       "      <td>122.24</td>\n",
+       "      <td>152.96</td>\n",
+       "      <td>144.48</td>\n",
+       "      <td>128.82</td>\n",
+       "      <td>124.49</td>\n",
+       "      <td>130.46</td>\n",
+       "      <td>106.86</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>348 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             CPI_Austria  CPI_Belgium  CPI_Bulgaria  CPI_Czechia  CPI_Denmark  \\\n",
+       "TIME_PERIOD                                                                     \n",
+       "1996Q1             71.34        69.91           NaN         57.0         70.4   \n",
+       "1996Q1             71.55        69.98           NaN         57.3         70.8   \n",
+       "1996Q1             71.77        70.12           NaN         57.6         71.3   \n",
+       "1996Q2             71.69        70.47           NaN         58.1         71.5   \n",
+       "1996Q2             71.62        70.61           NaN         58.4         71.7   \n",
+       "...                  ...          ...           ...          ...          ...   \n",
+       "2024Q3            133.77       132.73        138.83        152.9        119.7   \n",
+       "2024Q3            134.13       132.21        137.25        152.2        119.2   \n",
+       "2024Q4            134.63       132.90        138.14        152.6        120.0   \n",
+       "2024Q4            135.00       133.13        138.53        152.7        119.5   \n",
+       "2024Q4            135.92       134.12        138.99        152.3        119.1   \n",
+       "\n",
+       "             CPI_Estonia  CPI_Finland  CPI_France  CPI_Germany  CPI_Greece  \\\n",
+       "TIME_PERIOD                                                                  \n",
+       "1996Q1             42.87        71.20       74.13         75.1       59.04   \n",
+       "1996Q1             44.24        71.49       74.42         75.6       58.92   \n",
+       "1996Q1             44.95        71.63       74.90         75.7       60.64   \n",
+       "1996Q2             45.72        71.78       74.99         75.6       61.25   \n",
+       "1996Q2             45.95        71.99       75.19         75.7       61.74   \n",
+       "...                  ...          ...         ...          ...         ...   \n",
+       "2024Q3            156.41       119.23      124.77        129.8      119.57   \n",
+       "2024Q3            155.95       119.79      123.15        129.7      121.71   \n",
+       "2024Q4            157.20       120.71      123.54        130.2      121.80   \n",
+       "2024Q4            156.15       120.37      123.36        129.3      120.32   \n",
+       "2024Q4            156.57       120.46      123.62        130.2      120.42   \n",
+       "\n",
+       "             ...  CPI_Norway  CPI_Poland  CPI_Portugal  CPI_Romania  \\\n",
+       "TIME_PERIOD  ...                                                      \n",
+       "1996Q1       ...        69.2        43.0         65.76         2.71   \n",
+       "1996Q1       ...        69.3        43.6         66.09         2.76   \n",
+       "1996Q1       ...        69.5        44.3         66.23         2.81   \n",
+       "1996Q2       ...        69.7        45.2         66.76         2.87   \n",
+       "1996Q2       ...        69.9        45.8         67.03         3.02   \n",
+       "...          ...         ...         ...           ...          ...   \n",
+       "2024Q3       ...       134.8       149.7        122.37       150.40   \n",
+       "2024Q3       ...       135.1       149.8        124.28       151.01   \n",
+       "2024Q4       ...       136.0       150.3        123.84       152.08   \n",
+       "2024Q4       ...       136.6       150.8        122.58       152.57   \n",
+       "2024Q4       ...       136.4       150.9        122.24       152.96   \n",
+       "\n",
+       "             CPI_Slovakia  CPI_Slovenia  CPI_Spain  CPI_Sweden  \\\n",
+       "TIME_PERIOD                                                      \n",
+       "1996Q1              43.01         43.88      63.95       75.41   \n",
+       "1996Q1              43.12         44.43      64.08       75.60   \n",
+       "1996Q1              43.22         45.07      64.34       76.14   \n",
+       "1996Q2              43.35         45.76      64.73       76.49   \n",
+       "1996Q2              43.56         46.04      64.99       76.56   \n",
+       "...                   ...           ...        ...         ...   \n",
+       "2024Q3             143.65        128.18     123.54      128.35   \n",
+       "2024Q3             143.73        128.44     123.42      128.76   \n",
+       "2024Q4             144.82        128.11     123.91      129.36   \n",
+       "2024Q4             145.18        128.98     123.95      130.11   \n",
+       "2024Q4             144.48        128.82     124.49      130.46   \n",
+       "\n",
+       "             CPI_Switzerland  CPI_United_Kingdom  \n",
+       "TIME_PERIOD                                       \n",
+       "1996Q1                   NaN                67.8  \n",
+       "1996Q1                   NaN                68.1  \n",
+       "1996Q1                   NaN                68.4  \n",
+       "1996Q2                   NaN                68.7  \n",
+       "1996Q2                   NaN                68.9  \n",
+       "...                      ...                 ...  \n",
+       "2024Q3                107.86                 NaN  \n",
+       "2024Q3                107.50                 NaN  \n",
+       "2024Q4                107.48                 NaN  \n",
+       "2024Q4                106.92                 NaN  \n",
+       "2024Q4                106.86                 NaN  \n",
+       "\n",
+       "[348 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_CPI_pivot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Conversion des mois en trimestre\n",
+    "df_CPI_pivot.index = pd.PeriodIndex(df_CPI_pivot.index, freq='Q')\n",
+    "\n",
+    "# Pour chaque trimestre on a donc 3 valeurs on fait donc la moyenne\n",
+    "df_CPI_pivot = df_CPI_pivot.groupby(df_CPI_pivot.index).mean()\n",
+    "\n",
+    "# On modifie le format de l'index qui est YYYYQQ en YYYY-QQ pour l'accorder aux autres tables\n",
+    "df_CPI_pivot.index = df_CPI_pivot.index.astype(str).str.replace(r'(\\d{4})Q(\\d)', r'\\1-Q\\2', regex=True)\n"
    ]
   }
  ],
