--- a/data.ipynb
+++ b/data.ipynb
@@ -50,16 +50,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /opt/conda/lib/python3.12/site-packages (from -r requirements.txt (line 1)) (2.2.3)\n",
+      "Requirement already satisfied: numpy in /opt/conda/lib/python3.12/site-packages (from -r requirements.txt (line 2)) (2.2.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/conda/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /opt/conda/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2025.1)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas->-r requirements.txt (line 1)) (1.17.0)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,6 +401,18 @@
     "    ordered_columns.append(f'WH_{country}')\n",
     "\n",
     "df_final = df_concat[ordered_columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# télécharger les données en csv pour les utiliser dans d'autres notebooks\n",
+    "import pickle\n",
+    "\n",
+    "df_final.to_pickle(\"data_final.pkl\")"
    ]
   }
  ],
