Test- correction conflit de versions

--- a/data.ipynb
+++ b/data.ipynb
@@ -50,25 +50,13 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 2,
-=======
-   "execution_count": 14,
->>>>>>> b75b363e4d174ace220cb9e4df32ec9a0fc39514
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "Requirement already satisfied: pandas in /opt/conda/lib/python3.12/site-packages (from -r requirements.txt (line 1)) (2.2.3)\n",
-      "Requirement already satisfied: numpy in /opt/conda/lib/python3.12/site-packages (from -r requirements.txt (line 2)) (2.2.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/conda/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /opt/conda/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2025.1)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas->-r requirements.txt (line 1)) (1.17.0)\n"
-=======
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in c:\\users\\enriq\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from -r requirements.txt (line 1)) (2.2.3)\n",
       "Requirement already satisfied: numpy in c:\\users\\enriq\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from -r requirements.txt (line 2)) (2.2.1)\n",
@@ -85,21 +73,16 @@
       "\n",
       "[notice] A new release of pip is available: 24.3.1 -> 25.0.1\n",
       "[notice] To update, run: C:\\Users\\enriq\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
->>>>>>> b75b363e4d174ace220cb9e4df32ec9a0fc39514
      ]
     }
    ],
    "source": [
-    "!pip install -r requirements.txt"
+    "%pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 3,
-=======
-   "execution_count": 15,
->>>>>>> b75b363e4d174ace220cb9e4df32ec9a0fc39514
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,11 +101,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 4,
-=======
-   "execution_count": 16,
->>>>>>> b75b363e4d174ace220cb9e4df32ec9a0fc39514
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,11 +131,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 5,
-=======
-   "execution_count": 17,
->>>>>>> b75b363e4d174ace220cb9e4df32ec9a0fc39514
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,11 +169,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 6,
-=======
-   "execution_count": 18,
->>>>>>> b75b363e4d174ace220cb9e4df32ec9a0fc39514
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,11 +210,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 7,
-=======
-   "execution_count": 19,
->>>>>>> b75b363e4d174ace220cb9e4df32ec9a0fc39514
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,11 +257,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 8,
-=======
-   "execution_count": 20,
->>>>>>> b75b363e4d174ace220cb9e4df32ec9a0fc39514
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,11 +287,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 9,
-=======
-   "execution_count": 21,
->>>>>>> b75b363e4d174ace220cb9e4df32ec9a0fc39514
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,11 +330,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 10,
-=======
-   "execution_count": 22,
->>>>>>> b75b363e4d174ace220cb9e4df32ec9a0fc39514
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,11 +357,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 11,
-=======
-   "execution_count": 23,
->>>>>>> b75b363e4d174ace220cb9e4df32ec9a0fc39514
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,11 +387,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 12,
-=======
-   "execution_count": 24,
->>>>>>> b75b363e4d174ace220cb9e4df32ec9a0fc39514
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,29 +415,9 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# télécharger les données en csv pour les utiliser dans d'autres notebooks\n",
-    "import pickle\n",
-    "\n",
-    "df_final.to_pickle(\"data_final.pkl\")"
-=======
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: openpyxl in c:\\users\\enriq\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (3.1.5)\n",
-      "Requirement already satisfied: et-xmlfile in c:\\users\\enriq\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from openpyxl) (2.0.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -499,13 +426,22 @@
       "[notice] A new release of pip is available: 24.3.1 -> 25.0.1\n",
       "[notice] To update, run: C:\\Users\\enriq\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: openpyxl in c:\\users\\enriq\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (3.1.5)\n",
+      "Requirement already satisfied: et-xmlfile in c:\\users\\enriq\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from openpyxl) (2.0.0)\n"
+     ]
     }
    ],
    "source": [
     "#Exporter les données\n",
     "%pip install openpyxl\n",
     "df_final.to_excel('base_de_données_v1.xlsx', index=True, engine='openpyxl')\n"
->>>>>>> b75b363e4d174ace220cb9e4df32ec9a0fc39514
    ]
   }
  ],
