petit ajout dans modèle

--- a/modele.ipynb
+++ b/modele.ipynb
@@ -22,6 +22,7 @@
     "Ce notebook contient les codes nécessaire à la mise en place du modèle. Le modèle est inspiré de celui de Iacoviello et Navarro : \n",
     "\n",
     "- La première étape consiste à identifier les chocs de politique monétaire, en prenant le réside de la régression du taux d'intérêt sur l'écart d'inflation par rapport à la cible et l'output gap ou le chômage. En réalité Iacoviello et Navarro utilisent des lags et valeurs présentes de l'inflation, des spreads de crédit, du PIB et des lags des taux des fonds fédéraux.\n",
+    "Il nous manque donc l'output gap, l'inflation et le chômage de la zone euro\n",
     "- La deuxième étape consiste à estimer l'impact de ces chocs sur l'activité économique (PIB, emploi ...) en régressant ces variables sur les chocs et des variables de contrôles (4 lags du PIB et des trends linéaires et quadratiques)\n",
     "\n"
    ]
