modèle US monetary shocks (suite)

--- a/modele.ipynb
+++ b/modele.ipynb
@@ -36,18 +36,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "\n",
-    "data_final = pd.read_pickle(\"data_final.pkl\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -67,11 +55,50 @@
    "source": [
     "Problème: dans Iacoviello et Navarro, ils régressent le taux d'intérêt sur le PIB etc des US seulement. Or on est dans la zone euro ici, doit-on faire une régression de panel ? "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "data = pd.read_pickle('data_final.pkl')\n",
+    "\n",
+    "# Sélection des colonnes utiles\n",
+    "colonnes_utiles = ['federal_funds_rate', 'inflation', 'log_euroarea_gdp', 'corporate_spreads', 'log_foreign_gdp', 'lagged_federal_funds', 'time']\n",
+    "data = data[colonnes_utiles]\n",
+    "\n",
+    "# Création d'une variable de tendance quadratique\n",
+    "data['time_squared'] = data['time'] ** 2\n",
+    "\n",
+    "# Définition de rt=federal funds rate\n",
+    "Y = data['federal_funds_rate']\n",
+    "\n",
+    "# Définir les variables indépendantes\n",
+    "X = data[['inflation', 'log_euroarea_gdp', 'corporate_spreads', 'log_foreign_gdp', 'lagged_federal_funds', 'time', 'time_squared']]\n",
+    "X = sm.add_constant(X)  # Ajout d'une constante pour l'intercept\n",
+    "\n",
+    "# Regression\n",
+    "model = sm.OLS(Y, X).fit()\n",
+    "\n",
+    "# Extraire les résidus comme chocs monétaires\n",
+    "data['monetary_shocks'] = model.resid\n",
+    "\n",
+    "# Afficher le résumé de la régression\n",
+    "print(model.summary())\n",
+    "\n",
+    "# Sauvegarder les résultats dans un fichier CSV\n",
+    "data[['time', 'monetary_shocks']].to_csv('identified_monetary_shocks.csv', index=False)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -89,5 +116,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
