petite modif modèle partie 2

--- a/modele.ipynb
+++ b/modele.ipynb
@@ -592,6 +592,8 @@
     "Pour chaque h il faut estimer un $\\beta_h$, ensuite il faut faire les IRF (fonctions de réponse impulsionnelle) pour les différents Y qu'on utilise.\n",
     "\n",
     "\n",
+    "Pour les variables de contrôle, il faut sûrement tester lesquelles sont les meilleures, ne pas forcément reproduire exactement le modèle.\n",
+    "\n",
     "\n"
    ]
   },
@@ -648,7 +650,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "control_vars = ['GDP_lag1', 'GDP_lag2', 'GDP_lag3', 'GDP_lag4']  # Exemples de contrôles\n",
+    "control_vars = ['GDP_lag1', 'GDP_lag2', 'GDP_lag3', 'GDP_lag4', 'time', 'time_squared']  # Exemples de contrôles\n",
     "irf_results = local_projection_irf(data, response_var=\"GDP\", shock_var=\"Shock\", control_vars=control_vars, max_horizon=12)\n"
    ]
   },
