ajouts précisions sur le modèle

--- a/modele.ipynb
+++ b/modele.ipynb
@@ -574,7 +574,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous allons maintenant estimer avec une régression de panel l'impact des chocs de politique monétaire identifiés, sur différentes variables (GDP, employment ? ...).  \n",
+    "Nous allons maintenant estimer avec une régression de panel l'impact des chocs de politique monétaire identifiés, sur différentes variables (GDP, employment ? ...). La méthode utilisé est celle de Jorda (2005), la méthode de projection locale. Cela consiste à \"estimer des projections locales à chaque période au lieu d'extrapoler sur des horizons lointains à partir d'un modèle.\"\n",
     "Nous allons estimer une équation de la forme suivante, comme dans Iacoviello & Navarro (2018) :\n",
     "\n",
     "$$\n",
@@ -625,13 +625,14 @@
     "    for h in range(max_horizon + 1):\n",
     "        data[f'{response_var}_lead_{h}'] = data.groupby('Country')[response_var].shift(-h)\n",
     "        \n",
-    "        df = data.dropna(subset=[f'{response_var}_lead_{h}', shock_var] + control_vars)\n",
+    "        # suppression des lignes contenant des NA :\n",
+    "        df = data.dropna(subset=[f'{response_var}_lead_{h}', shock_var] + control_vars) \n",
     "        \n",
     "        y = df[f'{response_var}_lead_{h}']\n",
     "        X = df[[shock_var] + control_vars]\n",
     "        X = sm.add_constant(X)  # Ajouter l'intercept\n",
     "\n",
-    "        model = sm.OLS(y, X).fit(cov_type=\"cluster\", cov_kwds={\"groups\": df[\"Country\"]})  # Cluster par pays\n",
+    "        model = sm.OLS(y, X).fit(cov_type=\"cluster\", cov_kwds={\"groups\": df[\"Country\"]})  # Cluster par pays: corrige l’hétéroscédasticité et l'autocorrélation intra-groupe.\n",
     "        results.append((h, model.params[shock_var], model.bse[shock_var]))  # Stocker horizon, coefficient, erreur standard\n",
     "\n",
     "    return pd.DataFrame(results, columns=[\"Horizon\", \"Beta\", \"SE\"])\n"
@@ -651,7 +652,7 @@
    "outputs": [],
    "source": [
     "control_vars = ['GDP_lag1', 'GDP_lag2', 'GDP_lag3', 'GDP_lag4', 'time', 'time_squared']  # Exemples de contrôles\n",
-    "irf_results = local_projection_irf(data, response_var=\"GDP\", shock_var=\"Shock\", control_vars=control_vars, max_horizon=12)\n"
+    "irf_results = local_projection_irf(data, response_var=\"GDP\", shock_var=\"Shock\", control_vars=control_vars, max_horizon=12)"
    ]
   },
   {
