Ajout du df sur potential growth (voir notebook : "test données_copie_alt"). Il manque convertir les données annuelles en trimestrielles.

--- a/Stat'App- test données_copie_alt.ipynb
+++ b/Stat'App- test données_copie_alt.ipynb
@@ -490,25 +490,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tables en format long à merger : \n",
-    "set1 = set(df_working_hours_long_eurostat['geo'].unique())\n",
-    "set2 = set(df_cpi_pivot['geo'].unique())\n",
-    "set3 = set(df_ST_IR['Reference area'].unique())\n",
-    "set4 = set(df_LT_IR['Reference area'].unique())\n",
-    "set5 = set(df_GDP_selected['geo'].unique())\n",
-    "\n",
-    "pays_communs = set1 & set2 & set3 & set4 & set5  # Intersection de tous les ensembles\n",
-    "print(\"Pays communs :\", pays_communs)\n",
-    "print(\"Nombre de pays communs :\", len(pays_communs))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Concaténer les DataFrames\n",
     "df_concat = pd.concat([df_GDP, df_CPI,df_LT_IR, df_ST_IR, df_working_hours], axis=1)\n",
     "\n",
@@ -535,6 +516,74 @@
     "\n",
     "# Afficher le DataFrame final\n",
     "print(df_final)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Brouillon: dans la partie qui suit, on va extraire les nouvelles données (manquantes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Remarque: il va falloir modifier ajouter \"Czech Republic\" dans countries selected (pour maintenir le même échantillon de pays)\n",
+    "countries_selected=[\n",
+    "    \"Austria\", \"Belgium\", \"Bulgaria\", \"Czechia\", \"Czech Republic\",\"Denmark\", \"Estonia\", \n",
+    "    \"Finland\", \"France\", \"Germany\", \"Greece\", \"Hungary\", \"Iceland\", \n",
+    "    \"Ireland\", \"Italy\", \"Latvia\", \"Lithuania\", \"Luxembourg\", \"Netherlands\", \n",
+    "    \"Norway\", \"Poland\", \"Portugal\", \"Romania\", \"Slovakia\", \"Slovak Republic\",\n",
+    "    \"Slovenia\", \"Spain\", \"Sweden\", \"Switzerland\", \"United Kingdom\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remarque: nous avons gardé le filtre Hodrick-Prescott pour l'étude de la croissance potentielle\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_potential_growth= pd.read_excel(\"Données_extraites/potential_growth_database.xlsx\",sheet_name=\"PotentialGrowthMeasures\")\n",
+    "\n",
+    "#On renomme les colonnes (pour garder une homogénéité entre les différents df)\n",
+    "df_potential_growth= df_potential_growth.rename(columns={'Country':'geo', 'Year':'TIME_PERIOD','HP: Potential real GDP growth (percent)':'OBS_VALUE'})\n",
+    "df_potential_growth = df_potential_growth[df_potential_growth['TIME_PERIOD'] >= 1995]\n",
+    "\n",
+    "#Choix des colonnes nécessaires avec les pays sélectionnés. \n",
+    "df_potential_growth_selected = df_potential_growth[df_potential_growth['geo'].isin(countries_selected)][['geo', 'TIME_PERIOD', 'OBS_VALUE']]\n",
+    "\n",
+    "# Change le format avec les périodes en index et les noms des pays en noms de colonnes\n",
+    "df_potential_growth= df_potential_growth_selected.pivot_table(index='TIME_PERIOD', columns='geo', values='OBS_VALUE')\n",
+    "\n",
+    "# Transforme le nom des colonnes en P_Growth_pays\n",
+    "df_potential_growth.columns = [f'P_Growth_{col}' for col in df_potential_growth.columns]\n",
+    "df_potential_growth.columns = [col.replace(\" \", \"_\") for col in df_GDP.columns]\n",
+    "df_potential_growth = df_potential_growth.rename(columns={'Czech Republic': 'P_Growth_Czechia'})\n",
+    "df_potential_growth\n",
+    "\n"
    ]
   }
  ],
